--- a/app/globals.css
+++ b/app/globals.css
@@ -5,3 +5,21 @@
 body {
 	@apply bg-gray-900;
 }
+
+.scrollbar-pill::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	border-radius: 0rem 0.4rem 0.4rem 0rem;
+	background-color: #f5f5f5;
+}
+
+.scrollbar-pill::-webkit-scrollbar {
+	border-radius: 0rem 0.5rem 0.5rem 0rem;
+	width: 12px;
+	background-color: #f5f5f5;
+}
+
+.scrollbar-pill::-webkit-scrollbar-thumb {
+	border-radius: 0rem 0.5rem 0.5rem 0rem;
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	background-color: #555;
+}
