--- a/renderer/styles/globals.css
+++ b/renderer/styles/globals.css
@@ -23,3 +23,21 @@ body {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     background-color: #555;
 }
+
+form input, textarea {
+    @apply bg-gray-700 px-1 rounded-md shadow-[6px_6px_0px_0px_rgba(100,100,100,0.15)] transition-all ease-in-out duration-100
+}
+form input:hover, textarea:hover {
+    @apply translate-x-1 translate-y-1 shadow-[2px_2px_0px_0px_rgba(100,100,100,0.15)]
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+} 
