--- a/renderer/styles/globals.css
+++ b/renderer/styles/globals.css
@@ -3,41 +3,43 @@
 @tailwind utilities;
 
 body {
-    @apply bg-gray-900;
+	@apply bg-gray-900;
 }
 
 .scrollbar-pill::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    border-radius: 0rem 0.4rem 0.4rem 0rem;
-    background-color: #f5f5f5;
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	border-radius: 0rem 0.4rem 0.4rem 0rem;
+	background-color: #f5f5f5;
 }
 
 .scrollbar-pill::-webkit-scrollbar {
-    border-radius: 0rem 0.5rem 0.5rem 0rem;
-    width: 12px;
-    background-color: #f5f5f5;
+	border-radius: 0rem 0.5rem 0.5rem 0rem;
+	width: 12px;
+	background-color: #f5f5f5;
 }
 
 .scrollbar-pill::-webkit-scrollbar-thumb {
-    border-radius: 0rem 0.5rem 0.5rem 0rem;
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background-color: #555;
+	border-radius: 0rem 0.5rem 0.5rem 0rem;
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	background-color: #555;
 }
 
-form input, textarea {
-    @apply bg-gray-700 px-1 rounded-md shadow-[6px_6px_0px_0px_rgba(100,100,100,0.15)] transition-all ease-in-out duration-100
+form input,
+textarea {
+	@apply rounded-md bg-gray-700 px-1 shadow-[6px_6px_0px_0px_rgba(100,100,100,0.15)] transition-all duration-100 ease-in-out;
 }
-form input:hover, textarea:hover {
-    @apply translate-x-1 translate-y-1 shadow-[2px_2px_0px_0px_rgba(100,100,100,0.15)]
+form input:hover,
+textarea:hover {
+	@apply translate-x-1 translate-y-1 shadow-[2px_2px_0px_0px_rgba(100,100,100,0.15)];
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .no-scrollbar::-webkit-scrollbar {
-    display: none;
+	display: none;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .no-scrollbar {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-} 
+	-ms-overflow-style: none; /* IE and Edge */
+	scrollbar-width: none; /* Firefox */
+}
